--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.0.4",
     "react": "^18",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-scroll": "^1.9.0"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-collapse": "^5.0.4",
     "@types/react-dom": "^18",
     "@types/react-icons": "^3.0.0",
     "@types/react-scroll": "^1.8.10",
